@@ -1,3 +1,10 @@
+2008-05-22  Thomas Sefzick  <thse@users.sourceforge.net>
+
+	* src/bitmap.c (b_vector): If either end of a vector would fall outside
+	the canvas area, don't draw it.  This prevents segfaults and memory
+	access problems if the terminal coordinates overflow or go negative.
+	Bug #1969415
+
 2008-05-21  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/specfun.c (inverse_error_func):  The piecewise numerical
